--- a/src/main/resources/ba/unsa/etf/rpr/ibook/FXMLFiles/login.fxml
+++ b/src/main/resources/ba/unsa/etf/rpr/ibook/FXMLFiles/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -16,9 +17,9 @@
             <Label style="-fx-text-fill: white; -fx-font-size: 20;" text="Welcome to iBook" />
          </children>
       </HBox>
-      <VBox prefHeight="237.0" prefWidth="600.0" style="-fx-alignment: center;">
+      <VBox prefHeight="230.0" prefWidth="600.0" style="-fx-alignment: center;">
          <children>
-            <VBox prefHeight="50.0" spacing="4.0" style="-fx-alignment: center;">
+            <VBox prefHeight="165.0" prefWidth="600.0" style="-fx-alignment: center;">
                <children>
                   <Label style="-fx-text-fill: #A52A2A;" text="Username:">
                      <VBox.margin>
@@ -28,17 +29,30 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField style="-fx-max-width: 200;" />
-                  <VBox prefHeight="200.0" prefWidth="100.0" />
+                  <TextField fx:id="username" style="-fx-max-width: 200;" />
                   <Label style="-fx-text-fill: #A52A2A;" text="Password">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <PasswordField style="-fx-max-width: 200;" />
+                  <PasswordField fx:id="password" style="-fx-max-width: 200;" />
+                  <Button fx:id="loginbtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Login">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                     <children>
+                        <Label style="-fx-text-fill: #A52A2A;" text="Don't have an account?" />
+                        <Button fx:id="registerbtn" mnemonicParsing="false" prefWidth="80.0" text="Register" />
+                     </children>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </HBox>
                </children>
                <VBox.margin>
-                  <Insets bottom="50.0" />
+                  <Insets />
                </VBox.margin>
             </VBox>
          </children>
