--- a/src/main/resources/mainwindow.fxml
+++ b/src/main/resources/mainwindow.fxml
@@ -1,11 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.ibook.Controllers.HomeController">
    <children>
-      <Label layoutX="58.0" layoutY="27.0" text="Hi" />
+      <HBox alignment="CENTER" prefHeight="143.0" prefWidth="871.0" style="-fx-background-color: #A52A2A;">
+         <children>
+            <Label alignment="CENTER" style="-fx-text-fill: white;" text="Welcome to iBook">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <VBox prefHeight="471.0" prefWidth="871.0">
+         <children>
+            <HBox prefHeight="82.0" prefWidth="871.0">
+               <children>
+                  <TextField fx:id="searchBar" prefWidth="300.0" promptText="Search...">
+                     <HBox.margin>
+                        <Insets left="30.0" top="25.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <ChoiceBox fx:id="options" prefWidth="150.0" value="by Book">
+                     <HBox.margin>
+                        <Insets top="25.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+                  <Button mnemonicParsing="false" onAction="#search" prefWidth="100.0" text="Search">
+                     <HBox.margin>
+                        <Insets left="30.0" top="25.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox prefHeight="383.0" prefWidth="871.0">
+               <children>
+                  <TableView fx:id="bookTable" prefHeight="383.0" prefWidth="924.0">
+                    <columns>
+                      <TableColumn fx:id="colTitle" prefWidth="20.0" text="Title" />
+                      <TableColumn fx:id="colAuthor" prefWidth="20.0" text="Author" />
+                      <TableColumn fx:id="colGenre" prefWidth="20.0" text="Genre" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</VBox>
